<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.CreateHolidayActivity">

    <ImageView
        android:id="@+id/button_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/create_holiday_title"
        style="@style/TitleTextStyle"
        android:layout_width="344dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:hint="@string/title_create_holiday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_message_create_holiday"
        style="@style/ErrorTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_holiday_title" />

    <EditText
        android:id="@+id/name_input"
        style="@style/Input"
        android:layout_width="376dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_message_create_holiday" />

    <Button
        android:id="@+id/create_button"
        style="@style/Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="32dp"
        android:hint="@string/button_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_end_input" />

    <EditText
        android:id="@+id/street_input"
        style="@style/Input"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/street_input"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/num_input"
        style="@style/Input"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/num_input"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/street_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/locality_input"
        style="@style/Input"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/locality_input"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_input" />

    <EditText
        android:id="@+id/code_input"
        style="@style/Input"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/code_input"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/locality_input"
        app:layout_constraintTop_toBottomOf="@+id/street_input" />

    <Button
        android:id="@+id/map_button"
        style="@style/Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:hint="@string/button_switch_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locality_input" />

    <Button
        android:id="@+id/date_end_input"
        style="@style/Button"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:hint="@string/input_date_end_holiday"
        app:layout_constraintStart_toEndOf="@+id/date_start_input"
        app:layout_constraintTop_toBottomOf="@+id/map_button" />

    <Button
        android:id="@+id/date_start_input"
        style="@style/Button"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:hint="@string/input_date_start_holiday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_button" />

</androidx.constraintlayout.widget.ConstraintLayout>