<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/connection_button"
        style="@style/Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/button_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_title"
        style="@style/TitleTextStyle"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="24dp"
        android:hint="@string/title_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connection_button" />

    <TextView
        android:id="@+id/error_message_register"
        style="@style/ErrorTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/name_input"
        style="@style/Input"
        android:layout_width="164dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:hint="@string/input_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/firstname_input"
        style="@style/Input"
        android:layout_width="164dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="72dp"
        android:hint="@string/input_firstname"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <EditText
        android:id="@+id/email_input"
        style="@style/Input"
        android:layout_width="377dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/password_input"
        style="@style/Input"
        android:layout_width="377dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/confirm_input"
        style="@style/Input"
        android:layout_width="377dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/input_confirm"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/register_button"
        style="@style/Button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="48dp"
        android:text="@string/button_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_input" />

</androidx.constraintlayout.widget.ConstraintLayout>