<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="@dimen/default_margin"
    android:background="@color/background"

    android:layout_marginTop="@dimen/default_margin"
    android:layout_marginStart="@dimen/default_margin"
    android:layout_marginEnd="@dimen/default_margin">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/cardview_dark_background"

        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_name"
        style="@style/DefaultTextStyle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/default_margin"


        android:text="@string/item_placeholder_name"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_description"
        style="@style/DefaultTextStyle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"


        android:text="@string/item_placeholder_description"

        app:layout_constraintEnd_toEndOf="@+id/item_name"
        app:layout_constraintStart_toStartOf="@+id/item_name"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <TextView
        android:id="@+id/item_start_date"
        style="@style/DefaultTextStyle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/default_margin"


        android:text="@string/item_placeholder_start_date"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_description" />

    <TextView
        android:id="@+id/item_end_date"
        style="@style/DefaultTextStyle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/default_margin"

        android:text="@string/item_placeholder_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_start_date" />


</androidx.constraintlayout.widget.ConstraintLayout>