<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/default_margin">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_button_back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/button_back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:src="@drawable/ic_back" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/create_activity_title"
        style="@style/TitleTextStyle"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/title_activity_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_button_back_button" />


    <TextView
        android:id="@+id/error_message"
        style="@style/ErrorTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/create_activity_title"
        app:layout_constraintStart_toStartOf="@+id/create_activity_title"
        app:layout_constraintTop_toBottomOf="@+id/create_activity_title" />

    <EditText
        android:id="@+id/name_input"
        style="@style/Input"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:hint="@string/input_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/create_activity_title"
        app:layout_constraintStart_toStartOf="@+id/create_activity_title"
        app:layout_constraintTop_toBottomOf="@+id/create_activity_title" />

    <EditText
        android:id="@+id/description_input"
        style="@style/Input"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:hint="@string/input_description"
        android:inputType="text|textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/name_input"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_date_start_input"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/description_input">

        <Button
            android:id="@+id/date_start_input"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:hint="@string/input_date_start_holiday" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_date_end_input"
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/description_input"
        app:layout_constraintTop_toTopOf="@+id/card_date_start_input">

        <Button
            android:id="@+id/date_end_input"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:text="@string/input_date_end_holiday"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/card_date_end_input"
        app:layout_constraintTop_toBottomOf="@+id/card_date_end_input" >

        <ImageButton
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_create"
            android:background="@color/cardview_light_background"
            android:src="@drawable/ic_check_mark"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>